[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-cronjob-monitoring"
version = "0.0.1"
description = "A small package with a class and a decorator to integrate with Sentrys Cron Monitoring"
readme = "README.md"
authors = [{ name = "Johan Almquist", email = "johan.almquist@aranya.se" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies=[
    "httpx",
]
requires-python = ">=3.9"